# tree-sitter-kamailio

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-kamailio.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kamailio/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKamailio/: kamailio.h
bindings/swift/TreeSitterKamailioTests/: TreeSitterKamailioTests.swift
examples/: basic_config.cfg  simple_config.cfg
src/: grammar.json  node-types.json  parser.c
